account: init secret

--- a/account/templates/account-init-admin-secret.yaml
+++ b/account/templates/account-init-admin-secret.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "common.fullname" . }}
+  name: {{ include "common.fullname" . }}-admin
   namespace: {{ .Release.Namespace | quote }}
   labels: {{- include "common.labels" . | nindent 4 }}
     {{- if .Values.global.commonLabels }}
