fix: account secret

--- a/account/templates/account-init-admin-secret.yaml
+++ b/account/templates/account-init-admin-secret.yaml
@@ -15,5 +15,5 @@ metadata:
   {{- end }}
 type: Opaque
 data:
-  admin-password: {{ include "common.password" (dict "Namespace" .Release.Namespace "SecretName" ( include "common.fullname" . ) "PasswordKey" "admin-password") }}
+  admin-password: {{ include "common.password" (dict "Namespace" .Release.Namespace "SecretName" ( printf "%s-admin" ( include "common.fullname" . ) ) "PasswordKey" "admin-password") }}
 {{- end }}
