common: add containers

--- a/common/templates/configmap.yaml
+++ b/common/templates/configmap.yaml
@@ -20,7 +20,7 @@ metadata:
   {{- end }}
 data:
 {{- range $key, $value := $config.files }}
-  {{ $key }}: |
+  {{ tpl $key $ }}: |
 {{ tpl $value $ | indent 4 }}
 {{- end }}
 
