--- a/common/values.yaml
+++ b/common/values.yaml
@@ -52,6 +52,7 @@ global:
 
   imageRegistry: ""
   imagePullSecrets: []
+  terminationGracePeriodSeconds: ""
   extraDeploy: []
   configMaps: {}
   # default:
