--- a/reporter/values.yaml
+++ b/reporter/values.yaml
@@ -1,4 +1,5 @@
 global:
+  cookie_domain: <change me>
   hosts:
     account: "<change me>"
   datamodel:
@@ -134,6 +135,8 @@ common:
     - name: httpprivate
       containerPort: 8081
   envVars:
+    - name: COOKIE_DOMAIN
+      value: "{{ .Values.global.cookie_domain }}"
     - name: APP_LOGGING_LEVEL
       value: "{{ .Values.global.logs.loglevel }}"
     - name: HTTP_SECURITY_REMOTE
