--- a/logger/values.yaml
+++ b/logger/values.yaml
@@ -16,21 +16,22 @@ global:
     filex: <change me>
 
   storage:
-    type: S3A
     configurationFrom:
       secret:
         name: "aws-auth"
         properties:
           - source: access-key
             env: AWS_ACCESS_KEY_ID
-            target: fs.s3a.access.key
+            target: fs.s3.jclouds.identity
           - source: secret-access-key
             env: AWS_SECRET_ACCESS_KEY
-            target: fs.s3a.secret.key
+            target: fs.s3.jclouds.credential
     configuration:
-      fs.s3a.endpoint: https://s3.us-east-1.amazonaws.com
-      fs.s3a.path.style.access: true
-      fs.s3a.bucket: test-logs
+      fs.s3.jclouds.endpoint: https://s3.us-east-1.amazonaws.com
+      fs.s3.jclouds.s3.virtual-host-buckets: false
+
+      fs.default.jclouds.scheme: s3
+      fs.default.jclouds.container: test-bucket
 
   jvm:
     options: |
@@ -60,6 +61,8 @@ global:
         <logger name="oap.concurrent" level="WARN"/>
         <logger name="javax.management" level="ERROR" />
         <logger name="net.rubyeye.xmemcached" level="WARN" />
+        <logger name="org.jclouds" level="WARN"/>
+        <logger name="jclouds" level="WARN"/>
       
         <root level="${APP_LOGGING_LEVEL:-DEBUG}">
             <appender-ref ref="STDOUT"/>
@@ -182,10 +185,8 @@ common:
     - name: LOGGER_OUT_DIRECTORY
       value: /opt/xenoss-logger/logs
 
-    - name: UPLOADER_HADOOP_FILESYSTEM_TYPE
-      value: {{ .Values.global.storage.type }}
-    - name: UPLOADER_HADOOP_CONFIGURATION
-      value: {{ include "hadoop.configuration" . | quote }}
+    - name: UPLOADER_FILESYSTEM_CONFIGURATION
+      value: {{ include "filesystem.configuration" . | quote }}
     - name: FILE_PATTERN
       value: {{ .Values.global.file_pattern.default }}
     - name: FILE_PATTERN_BY_TYPE
@@ -200,7 +201,7 @@ common:
       value: {{ .Values.global.disk.refresh.init_delay | quote }}
     - name: UPLOADER_REFRESH_PERIOD
       value: {{ .Values.global.disk.refresh.period | quote }}
-    {{- include "hadoop.env" . }}
+    {{- include "filesystem.env" . }}
 
   configMaps:
     default:
