global.modules.frequency_capping: false

--- a/bidder/values.yaml
+++ b/bidder/values.yaml
@@ -1,4 +1,6 @@
 global:
+  modules:
+    frequency_capping: false
   aerospike:
     readTimeout: 30
     readBatchTimeout: 30
@@ -150,6 +152,8 @@ common:
     - name: httpprivate
       containerPort: 8081
   envVars:
+    - name: OAP_BOOT_MODULE_FREQUENCY_CAPPING
+      value: "{{ .Values.global,modules.frequency_capping }}"
     - name: TRAFFIC_OFF
       value: "false"
     - name: APP_LOGGING_LEVEL
