global.modules.frequency_capping,user_profile_id_path

--- a/bidder/values.yaml
+++ b/bidder/values.yaml
@@ -1,6 +1,8 @@
 global:
   modules:
-    frequency_capping: false
+    frequency_capping:
+      enabled: false
+      user_profile_id_path: "${ifa}"
   aerospike:
     readTimeout: 30
     readBatchTimeout: 30
@@ -152,8 +154,12 @@ common:
     - name: httpprivate
       containerPort: 8081
   envVars:
+    {{- if .Values.global.modules.frequency_capping.enabled }}
     - name: OAP_BOOT_MODULE_FREQUENCY_CAPPING
-      value: "{{ .Values.global.modules.frequency_capping }}"
+      value: "true"
+    - name: OAP_BOOT_MODULE_FREQUENCY_CAPPING_USER_PROFILE_ID_PATH
+      value: "{{ .Values.global.modules.frequency_capping.user_profile_id_path }}"
+    {{- end }}
     - name: TRAFFIC_OFF
       value: "false"
     - name: APP_LOGGING_LEVEL
