XFG-58 refactoring: UserProfileEnricher

--- a/audience/values.yaml
+++ b/audience/values.yaml
@@ -155,6 +155,8 @@ common:
 
     - name: STORAGE_CONFIGURATION
       value: {{ include "filesystem.configuration" . | quote }}
+    {{- include "filesystem.env" . }}
+
   configMaps:
     default:
       enabled: true
