--- a/logger/values.yaml
+++ b/logger/values.yaml
@@ -167,6 +167,7 @@ global:
   persistence:
     enabled: true
     localpath: /opt/xenoss/logger
+    storageClassName: ""
 
 common:
   containerPorts:
