XFG-66 account: configuration to set the token's expiration date

--- a/account/values.yaml
+++ b/account/values.yaml
@@ -9,7 +9,7 @@ global:
   auth:
     tokens:
       accessSecretExpiration: 2m
-      refreshSecretExpiration: 1m
+      refreshSecretExpiration: 30d
   init:
     admin:
       email: <change me>
